add edit_skillet_yaml for #58

--- a/src/panhandler/.pan-cnc.yaml
+++ b/src/panhandler/.pan-cnc.yaml
@@ -44,6 +44,12 @@ views:
       - repo_name
       - skillet
 
+  - name: edit_skillet_yaml
+    class: UpdateSkilletYamlView
+    parameters:
+      - repo_name
+      - skillet
+
   - name: create_skillet
     class: CreateSkilletView
 
