--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,7 @@ docker_test:
   image: $TEST_IMAGE
   stage: test
   before_script:
+    - python3 -m venv env
     - source env/bin/activate
     - pip install tox
   script:
