--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,5 @@ urllib3==1.25.9
 virtualenv==20.0.21
 xmldiff==2.4
 xmltodict==0.12.0
-skilletlib==0.3.9.5
-# git+https://github.com/PaloAltoNetworks/skilletlib.git@develop#egg=skilletlib
+#skilletlib==0.3.9.5
+git+https://github.com/PaloAltoNetworks/skilletlib.git@20c185886a42ca343c80db4d25e03de1054a1b9b#egg=skilletlib
