--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ GitPython==3.1.3
 PyYAML==5.3.1
 azure-cli==2.7.0
 celery==4.4.5
-django==3.1.6
+django~=3.1.7
 django-widget-tweaks==1.4.8
 docker==4.2.1
 cryptography==2.9.2
@@ -21,6 +21,6 @@ urllib3==1.25.9
 virtualenv==20.0.21
 xmldiff==2.4
 xmltodict==0.12.0
-#skilletlib==0.4.1
-git+https://github.com/PaloAltoNetworks/skilletlib.git@develop#egg=skilletlib
+skilletlib~=1.0.0
+#git+https://github.com/PaloAltoNetworks/skilletlib.git@develop#egg=skilletlib
 panforge==0.0.0.1
