--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 GitPython==3.1.3
-PyYAML==5.3.1
+PyYAML~=5.4
 azure-cli==2.7.0
 celery==4.4.5
 django~=3.1.7
@@ -12,7 +12,7 @@ netaddr==0.7.19
 oyaml==0.9
 pan-python==0.16.0
 paramiko~=2.7.1
-passlib==1.7.2
+passlib~=1.7.2
 pathlib~=1.0.1
 pyAesCrypt==0.4.3
 requests==2.23.0
