--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-GitPython==3.1.3
-PyYAML~=5.4
+GitPython==3.1.14
+PyYAML~=5.4.1
 azure-cli==2.7.0
-celery==4.4.5
+celery==5.0.5
 django~=3.1.7
 django-widget-tweaks==1.4.8
-docker==4.2.1
+docker==4.4.4
 cryptography==2.9.2
-jinja2==3.0.0a1
-jsonpath-ng==1.5.1
-netaddr==0.7.19
-oyaml==0.9
+Jinja2==3.0.0a1
+jsonpath-ng==1.5.2
+netaddr==0.8.0
+oyaml==1.0
 pan-python==0.16.0
 paramiko~=2.7.1
 passlib~=1.7.2
 pathlib~=1.0.1
 pyAesCrypt==0.4.3
-requests==2.23.0
+requests==2.25.1
 requests-toolbelt==0.9.1
-urllib3==1.25.9
-virtualenv==20.0.21
+urllib3==1.25.11
+virtualenv==20.4.3
 xmldiff==2.4
 xmltodict==0.12.0
 skilletlib~=1.0.0
