add PAN-OS tools menu and config diff options

--- a/src/panhandler/snippets/app/generate_skillet_connect/.meta-cnc.yaml
+++ b/src/panhandler/snippets/app/generate_skillet_connect/.meta-cnc.yaml
@@ -11,7 +11,7 @@ variables:
     default: 10.10.10.10
     type_hint: fqdn_or_ip
   - name: TARGET_PORT
-    description: Panorama port
+    description: API Port
     default: 443
     type_hint: number
   - name: TARGET_USERNAME
