--- a/src/panhandler/snippets/app/config_diff_setcli_output/setcli_output.skillet.yaml
+++ b/src/panhandler/snippets/app/config_diff_setcli_output/setcli_output.skillet.yaml
@@ -1,7 +1,7 @@
-name: config_diff_ansible_output
-label: Ansible Template
+name: config_diff_setcli_output
+label: Skillet Template
 description: |
-  Used to show config diff in Ansible Format
+  Used to show config diff in set CLI format
 
 type: template
 
@@ -21,4 +21,4 @@ snippets:
     template_title: Generated Skillet
     output_type: text
     outputs:
-      - name: SKILLET_CONTENT
+      - name: set_cli_output
