fix for ewd#400 typo in POST-Configuration

--- a/src/panhandler/snippets/app/generate_skillet_online/.meta-cnc.yaml
+++ b/src/panhandler/snippets/app/generate_skillet_online/.meta-cnc.yaml
@@ -14,7 +14,7 @@ variables:
     help_text: This Configuration file will be used as the before state for the evaluation of differences
 
   - name: post_config
-    description: Post-Configuratin Source
+    description: Post-Configuration Source
     type_hint: dropdown
     source: post_configs
     help_text: This Configuration file will be used as the after state for the evaluation of differences
