--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django~=3.1.8
 django-widget-tweaks==1.4.8
 docker==4.4.4
 cryptography==2.9.2
-Jinja2==3.0.0a1
+Jinja2~=3.0.1
 jsonpath-ng==1.5.2
 netaddr==0.8.0
 oyaml==1.0
@@ -17,10 +17,10 @@ pathlib~=1.0.1
 pyAesCrypt==0.4.3
 requests==2.25.1
 requests-toolbelt==0.9.1
-urllib3==1.26.4
+urllib3==1.26.5
 virtualenv==20.4.4
 xmldiff==2.4
 xmltodict==0.12.0
-skilletlib~=1.0.6
+skilletlib~=1.0.9
 #git+https://github.com/PaloAltoNetworks/skilletlib.git@develop#egg=skilletlib
 panforge==0.0.0.1
