--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,8 +75,8 @@ docker_test:
   before_script:
     - python3 -m venv env
     - source env/bin/activate
-    - pip install --upgrade pip
-    - pip install tox
+    - pip3 install --upgrade pip
+    - pip3 install tox
   script:
     - cd /app
     - ls -al
