--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ django~=3.1.8
 django-widget-tweaks==1.4.8
 docker==4.4.4
 cryptography==2.9.2
-Jinja2~=3.0.1
+Jinja2==3.0.1
 jsonpath-ng==1.5.2
 netaddr==0.8.0
 oyaml==1.0
@@ -21,6 +21,6 @@ urllib3==1.26.5
 virtualenv==20.4.7
 xmldiff==2.4
 xmltodict==0.12.0
-skilletlib~=1.2.1
+skilletlib~=1.2.4
 #git+https://github.com/PaloAltoNetworks/skilletlib.git@develop#egg=skilletlib
 panforge==0.0.0.1
